--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Taskmanager</string>
     <string name="team_details">Team Details</string>
+    <string name="slogan">Manage your work</string>
 </resources>
