--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="add_workitem_button">Add</string>
     <string name="slogan">Manage your work</string>
     <string name="add_member">+ Add user</string>
+    <string name="update">Update</string>
 </resources>
