stash-pop failure :-S

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="slogan">Manage your work</string>
     <string name="add_member">+ Add user</string>
     <string name="update">Update</string>
+    <string name="search_hint">Search</string>
 </resources>
