--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="slogan">Manage your work</string>
     <string name="add_member">+ Add user</string>
     <string name="update">Update</string>
+    <string name="workitem_assigned_user">Assigned user</string>
+    <string name="workitem_status">Status</string>
     <string name="unstarted">unstarted</string>
     <string name="started">started</string>
     <string name="done">done</string>
@@ -16,4 +18,10 @@
     <string name="task">Task</string>
     <string name="r">r</string>
     <string name="search_hint">Search</string>
+    <string-array name="workitem_status">
+        <item>Unstarted</item>
+        <item>Started</item>
+        <item>Done</item>
+        <item>Archived</item>
+    </string-array>
 </resources>
