Final commit on GoogleSignIn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="task">Task</string>
     <string name="r">r</string>
     <string name="search_hint">Search</string>
+    <string name="log_out">Log Out</string>
+    <string name="sig_out">Sig out!</string>
 </resources>
