--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="search_hint">Search</string>
     <string name="enter_title_here">Enter title here!</string>
     <string name="search">Search</string>
+    <string name="sign_out">Sign Out</string>
     <string-array name="workitem_status">
         <item>Unstarted</item>
         <item>Started</item>
